Main Video working

--- a/src/app/components/youtube-video/youtube-video.component.html
+++ b/src/app/components/youtube-video/youtube-video.component.html
@@ -1,10 +1,10 @@
 <section class="main">
    <div class="main__video">
-      <div class="main__video__frame">
-
+      <div id="player" class="main__video__frame">
       </div>
       <div class="main__video__description">
-
+         <h4>{{title}}</h4>
+         <p>{{description}}</p>
       </div>
    </div>
 </section>
