--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,13 @@
+<nav class="navbar">
+   <div class="navbar__container">
+      <div class="navbar__container__logo">
+         <img src="assets/logo-neg-min.png" alt="logo">
+      </div>
+      <div class="navbar__container__search-bar">
+         <input type="text" [(ngModel)]="search_string" (keydown)="onKeydown($event)">
+      </div>
+   </div>
+</nav>
+
 <app-youtube-list></app-youtube-list>
-<app-youtube-video></app-youtube-video>
+<app-youtube-video [title]="title" [id]="id" [description]="description"></app-youtube-video>
