--- a/src/app/components/youtube-video/youtube-video.component.html
+++ b/src/app/components/youtube-video/youtube-video.component.html
@@ -1,9 +1,8 @@
 <section class="main">
    <div class="main__video">
-      <div id="player" class="main__video__frame">
-      </div>
+      <div id="player" class="main__video__frame"></div>
       <div class="main__video__description">
-         <h4>{{title}}</h4>
+         <h2>{{title}}</h2>
          <p>{{description}}</p>
       </div>
    </div>
