--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ $gray: #333333;
 body{
    margin: 0;
    padding: 0;
+   font-family: 'Comfortaa';
 }
 
 .navbar{
@@ -61,13 +62,66 @@ body{
          }
       }
       .main__video__description{
-         background-color: $green;
-         width: 45vw;
+         width: auto;
          height: 25vw;
+         padding: 3em;
+         margin: 3em;
+         h2{
+            font-weight: 700;
+         }
+         p{
+            font-weight: 300;
+         }
       }
    }
 }
 
+
 @media screen and (max-width:1024px){
+
+   .main{
+      margin-top: 3rem;
+      .main__video{
+         display: flex;
+         flex-direction: column;
+         .main__video__frame{
+            background-color: $green;
+            width: 90vw;
+            height: 50vw;
+            .youtube__frame{
+               width: 100%;
+               height: 100%;
+            }
+         }
+         .main__video__description{
+            width: 90vw;
+            height: 50vh;
+            padding: 0;
+            margin: 0;
+            margin-top: 1rem;
+         }
+      }
+   }
+
+   .list{
+      margin-top: 7rem;
+      margin-left: 2rem;
+      margin-right: 2rem;
+      .list__slider{
+         display: grid;
+         grid-template-columns: repeat(6, 45vw);
+         grid-column-gap: 5vw;
+         align-items: center;
+         justify-items: center;
+         overflow: auto;
+         .list__slider__card{
+            margin: 0;
+            padding: 0;
+            background-color: $light-green;
+            width: 45vw;
+            height: 25vw;
+         }
+      }
+   }
 
 }
