--- a/src/app/components/youtube-video/youtube-video.component.html
+++ b/src/app/components/youtube-video/youtube-video.component.html
@@ -2,8 +2,9 @@
    <div class="main__video">
       <div id="player" class="main__video__frame"></div>
       <div class="main__video__description">
-         <h2>{{title}}</h2>
-         <p>{{description}}</p>
+         <h2>{{mainVideo.title}}</h2>
+         <h5>Por: {{mainVideo.channelTitle}}</h5>
+         <p>{{mainVideo.description}}</p>
       </div>
    </div>
 </section>
