--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,11 +3,16 @@
       <div class="navbar__container__logo">
          <img src="assets/logo-neg-min.png" alt="logo">
       </div>
+      <div class="navbar__container__name">
+         <h1>Experimentalitube</h1>
+      </div>
       <div class="navbar__container__search-bar">
-         <input type="text" [(ngModel)]="search_string" (keydown)="onKeydown($event)">
+         <input type="text" [(ngModel)]="search_string" placeholder=" Buscar..." (keydown)="onKeydown($event)">
+         <button (click)="onSearch()">
+            <i class="fa fa-search"></i>
+         </button>
       </div>
    </div>
 </nav>
 
-<app-youtube-list></app-youtube-list>
-<app-youtube-video [title]="title" [id]="id" [description]="description"></app-youtube-video>
+<app-youtube-list [videos]="videos" [mainId]="mainId" [mainVideo]="mainVideo"></app-youtube-list>
