--- a/src/app/components/youtube-video/youtube-video.component.html
+++ b/src/app/components/youtube-video/youtube-video.component.html
@@ -3,7 +3,7 @@
       <div id="player" class="main__video__frame"></div>
       <div class="main__video__description">
          <h2>{{mainVideo.title}}</h2>
-         <h5>Por: {{mainVideo.channelTitle}}</h5>
+         <h4>Creador {{mainVideo.channelTitle}}</h4>
          <p>{{mainVideo.description}}</p>
       </div>
    </div>
