--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,8 @@ body{
             font-size: 1.2rem;
             box-shadow: none;
             border: 0;
+            border-bottom-left-radius: 1rem;
+            border-top-left-radius: 1rem;
          }
          button{
             background-color: white;
@@ -76,9 +78,22 @@ body{
       .list__slider__card{
          width: 15vw;
          height: 9vw;
+         word-wrap: break-word;
          img {
             width: 100%;
             height: 100%;
+         }
+         img:hover {
+            width: 100%;
+            height: 100%;
+            filter: grayscale(1);
+            transition-property: filter;
+            transition-duration: 1.5s; 
+         }
+         h5{
+            padding: 0;
+            margin: 0.5rem;
+            font-weight: 300;
          }
       }
       .list__slider__card:nth-of-type(1) {
@@ -91,7 +106,7 @@ body{
 }
 
 .main{
-   margin-top: 6rem;
+   margin-top: 9rem;
    .main__video{
       display: grid;
       grid-template-columns: repeat(2,1fr);
@@ -106,16 +121,20 @@ body{
          }
       }
       .main__video__description{
-         width: auto;
+         width: 90%;
          height: 25vw;
          word-wrap: break-word;
+         padding-left: 1%;
+         padding-right: 7%;
+
          h2{
+
             padding-top: 0;
             margin-top: 0;
             font-size: 2rem;
             font-weight: 700;
          }
-         h5{
+         h4{
             font-weight: 300;
          }
          p{
@@ -150,12 +169,11 @@ body{
    }
 
    .main{
-      margin-top: 4rem;
+      margin-top: 2rem;
       .main__video{
          display: flex;
          flex-direction: column;
          .main__video__frame{
-            background-color: $green;
             width: 90vw;
             height: 50vw;
             .youtube__frame{
@@ -187,7 +205,7 @@ body{
    }
 
    .list{
-      margin-top: 9rem;
+      margin-top: 8rem;
       margin-left: 1.4rem;
       margin-right: 1.4rem;
       .list__slider{
@@ -197,12 +215,21 @@ body{
          align-items: center;
          justify-items: center;
          overflow: auto;
+         height: auto;
          .list__slider__card{
             margin: 0;
             padding: 0;
-            background-color: $light-green;
             width: 45vw;
-            height: 25vw;
+            height: 35vw;
+            img{
+               height: 70%;
+            }
+            h5{
+               font-size: 0.7rem;
+               white-space: nowrap;
+               overflow: hidden;
+               text-overflow: ellipsis;
+            }
          }
       }
    }
