--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,7 @@ body{
          input[type=text]{
             width: 40vw;
             height: 2rem;
+            padding-left: 1rem;
             font-size: 1.2rem;
             box-shadow: none;
             border: 0;
@@ -107,6 +108,7 @@ body{
 
 .main{
    margin-top: 9rem;
+   margin-bottom: 8rem;
    .main__video{
       display: grid;
       grid-template-columns: repeat(2,1fr);
@@ -142,6 +144,19 @@ body{
             font-weight: 400;
          }
       }
+   }
+}
+
+.footer{
+   background-color: #1E1E1E;
+   padding: 3rem;
+
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   .footer__text{
+      color: white;
    }
 }
 
@@ -233,5 +248,7 @@ body{
          }
       }
    }
-
+   .footer{
+      padding: 2rem;
+   }
 }
